--- a/index.html
+++ b/index.html
@@ -71,197 +71,15 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>
-					<h1>青武jam</h1>
-					<p>Webサイト総合技術解説</p>
-                    <p><small>(ドキュメント・ソースコード準拠)</small></p>
-				</section>
-                <section>
-					<section>
-						<h3>アーキテクチャ & 認証</h3>
-						<p class="left-align">ASP.NET Core MVCパターンを基本とし、リアルタイム通信部分をFirebaseが担います。</p>
-						<p class="left-align"><strong>認証フロー:</strong></p>
-						<ul class="left-align">
-							<li><strong>匿名認証 (一般ユーザー):</strong> 掲示板投稿など、登録不要の機能で使用。</li>
-							<li><strong>メール/パスワード認証 (管理者):</strong> 丼カウンター更新など、特権が必要な操作で使用 (<code>admin@seibu.local</code>)。</li>
-						</ul>
-					</section>
-					<section>
-						<h3>中核サービス: FirebaseService.cs</h3>
-						<p class="left-align">Firebase Realtime Databaseとの全ての通信をカプセル化する重要なサービスです。</p>
-						<ul class="left-align">
-							<li><strong>責務:</strong> データベースへのCRUD操作、認証トークン管理、入力値の検証とサニタイズ。</li>
-							<li><strong>XSS対策:</strong> ユーザー入力は <code>System.Net.WebUtility.HtmlEncode</code> を用いてHTMLエンコードし、安全性を確保します。</li>
-						</ul>
-					</section>
-				</section>
-                <section>
-					<section>
-						<h2>ホーム & 掲示板</h2>
-						<p>天気予報、風呂の混雑度予測、掲示板機能を提供するメインページ。</p>
-					</section>
-					<section>
-						<h3>技術詳細: ホーム & 掲示板</h3>
-						<p class="left-align">
-							<strong>バックエンド (<code>HomeController</code>, <code>FirebaseController</code>):</strong><br>
-							ページの初期表示と、掲示板への投稿リクエストを処理します。
-						</p>
-						<p class="left-align">
-							<strong>データ永続化 (<code>FirebaseService</code>):</strong><br>
-							Firebaseとの通信を担い、メッセージの投稿や取得を行います。投稿は匿名認証、メッセージ削除は管理者認証が必要です。
-						</p>
-						<p class="left-align">
-							<strong>フロントエンド (<code>Home/Index.cshtml</code>):</strong><br>
-							- <strong>天気:</strong> 気象庁APIを非同期で取得し表示します。<br>
-							- <strong>混雑度（予測）:</strong> Chart.jsを使い、曜日や天候を考慮した予測グラフを動的に描画します。<br>
-							- <strong>混雑度（現在）:</strong> Firebase Realtime Databaseから現在のスリッパ数と混雑度を取得し、リアルタイムに表示します。30秒間隔で自動更新され、手動更新も可能です。<br>
-							- <strong>掲示板:</strong> ユーザー操作をトリガーに非同期でデータを送受信し、UIに反映します。
-						</p>
-					</section>
-				</section>
-                <section>
-					<section>
-						<h2>現在の混雑度取得プログラム</h2>
-						<p>寮の風呂の現在の混雑度をリアルタイムで表示する機能。</p>
-					</section>
-					<section>
-						<h3>技術詳細: バックエンド</h3>
-						<p class="left-align">
-							<strong>バックエンド (<code>HomeController.cs</code>, <code>FirebaseService.cs</code>):</strong><br>
-							- <code>HomeController</code>の<code>Index</code>アクションで<code>FirebaseService.GetCurrentBathCongestion()</code>を呼び出し、現在の混雑度データを取得します。<br>
-							- <code>FirebaseService.GetCurrentBathCongestion()</code>は、Firebase Realtime Databaseの<code>bathCongestion/current</code>パスから最新の混雑度情報を取得します。<br>
-							- <code>HomeController</code>には、Ajaxリクエストで最新の混雑度を取得するための<code>GetCurrentCongestion</code>APIエンドポイントも実装されています。
-						</p>
-					</section>
-					<section>
-						<h3>技術詳細: データモデル</h3>
-						<p class="left-align">
-							<strong>データモデル (<code>BathCongestion.cs</code>):</strong><br>
-							- 混雑度情報を格納するためのモデルで、<code>SlippersCount</code>（スリッパ数）、<code>CongestionLevel</code>（混雑レベル）、<code>CongestionPercentage</code>（混雑度パーセンテージ）、<code>Message</code>（表示メッセージ）、<code>LastUpdated</code>（最終更新日時）などのプロパティを持ちます。<br>
-							- <strong>スリッパカウント:</strong> 寮の風呂の混雑度を測るための主要な指標。風呂の入り口に置かれたスリッパの数をカウントし、その数をFirebaseに記録することで、現在の混雑状況を数値化しています。この数値は、混雑度パーセンテージやメッセージの算出にも利用されます。
-						</p>
-					</section>
-					<section>
-						<h3>技術詳細: フロントエンド</h3>
-						<p class="left-align">
-							<strong>フロントエンド (<code>Home/Index.cshtml</code> & JS):</strong><br>
-							- 取得した混雑度データは、<code>Home/Index.cshtml</code>内で表示されます。<br>
-							- JavaScriptにより、30秒間隔での自動更新と、手動での更新機能が提供されています。
-						</p>
-					</section>
-					<section>
-						<h3>プログラム処理手順: スリッパカウントシステム</h3>
-						<p class="left-align">
-							寮の風呂の混雑度をリアルタイムで把握するため、以下の手順でデータが処理されます。
-						</p>
-						<ul class="left-align">
-							<li><strong>1. 画像撮影 (<code>syori_2.py</code>):</strong> 接続されたウェブカメラ（BUSID 2-9）からスリッパの画像を撮影し、一時ファイルとして保存します。</li>
-							<li><strong>2. 画像解析 (<code>gemini_analyzer.py</code>):</strong> 撮影された画像をGoogle Gemini APIに送信し、「画像に写っているスリッパの組数」を質問します。Gemini APIの利用には、複数のモデル（<code>gemini-2.0-flash-lite-001</code>, <code>gemini-2.0-flash</code>, <code>gemini-1.5-flash</code>）を優先順位付けして試行するフォールバックロジックが実装されており、APIクォータやエラー発生時にも対応します。</li>
-							<li><strong>3. スリッパ数抽出と混雑度計算 (<code>firebase_updater.py</code>):</strong> Gemini APIからの解析結果（テキスト）から正規表現を用いてスリッパの組数（数字）を抽出し、その数に基づいて寮の風呂の混雑度（「空いています」などのレベル、パーセンテージ、表示メッセージ）を計算します。</li>
-							<li><strong>4. Firebaseへのデータ送信 (<code>firebase_updater.py</code>):</strong> 計算された混雑度データは、Firebase Admin SDKを通じてFirebase Realtime Databaseに送信されます。現在の混雑度情報（<code>bathCongestion/current</code>）がリアルタイムで更新されるとともに、履歴データ（<code>bathCongestion/history</code>）としても記録されます。</li>
-						</ul>
-					</section>
-				</section>
-                <section>
-					<section>
-						<h2>丼カウンター</h2>
-						<p>寮の昼食が「丼」だったかどうかを記録・集計するカウンターです。</p>
-					</section>
-					<section>
-						<h3>技術詳細: 丼カウンター</h3>
-						<p class="left-align">
-							<strong>バックエンド (<code>DonCounterController</code>):</strong><br>
-							カウンターの表示(GET)と、パスワード(<code>seibu2025</code>)で保護された更新/リセット(POST)を処理します。
-						</p>
-						<p class="left-align">
-							<strong>データ永続化 (<code>FirebaseService</code> & Rules):</strong><br>
-							Firebaseのセキュリティルールにより、データの読み取りは全ユーザーに許可し、書き込みは管理者(<code>admin@seibu.local</code>)のみに制限しています。
-						</p>
-						<p class="left-align">
-							<strong>フロントエンド (<code>DonCounter/Index.cshtml</code>):</strong><br>
-							サーバーから渡されたデータを基に、丼率/非丼率を計算し、Bootstrapのプログレスバーで視覚的に表示します。
-						</p>
-					</section>
-				</section>
-                <section>
-					<section>
-						<h2>スケジュール</h2>
-						<p>福井高専の年間行事予定を月別のタブとカレンダーで表示します。</p>
-					</section>
-					<section>
-						<h3>技術詳細: スケジュール</h3>
-						<p class="left-align">
-							<strong>バックエンド (<code>HomeController.cs</code>):</strong><br>
-							- <code>schedule</code>アクションは、静的な<code>Schedule.cshtml</code>ビューを返すシンプルな構成です。
-						</p>
-						<p class="left-align">
-							<strong>フロントエンド (<code>Schedule.cshtml</code> & <code>schedule-calendar.js</code>):</strong><br>
-							- <strong>行事データ:</strong> <code>schedule-calendar.js</code>内の<code>ScheduleCalendar</code>クラスに、JavaScriptのオブジェクトとして全行事データがハードコードされています。<br>
-							- <strong>動的カレンダー生成:</strong> ユーザーが月のタブを切り替えると、JavaScriptがその月のカレンダーを動的に生成・描画します。日付セルには、祝日、試験、イベントなどの種類に応じて異なるCSSクラスが付与され、色分けされます。<br>
-							- <strong>凡例表示:</strong> 各月のカレンダー下部には、その月に存在する行事の種類だけの凡例が動的に生成され、ユーザービリティを高めています。
-						</p>
-					</section>
-				</section>
-                <section>
-					<section>
-						<h2>デスカウントダウン</h2>
-						<p>次の試験までの残り日数を表示する、刺激的なデザインのページです。</p>
-					</section>
-					<section>
-						<h3>技術詳細: デスカウントダウン</h3>
-						<p class="left-align">
-							<strong>フロントエンド (<code>ExamCountdown.cshtml</code> & JS):</strong><br>
-							- <strong>試験データ:</strong> JavaScriptの配列(<code>scheduleData</code>)として、試験期間のデータが静的に保持されています。<br>
-							- <strong>カウントダウンロジック:</strong> <code>getJapanTime</code>関数で正確な日本時間を取得し、今日の日付と比較して次の試験開始日までの残り日数を計算します。<br>
-							- <strong>UI更新:</strong> 計算結果を基に、メインのカウントダウン表示と、それ以降の試験予定リストを動的に更新します。<br>
-							- <strong>デザイン:</strong> CSSで`Creepster`フォントや、<code>@keyframes</code>を用いたアニメーションを多用し、ページの世界観を演出しています。
-						</p>
-					</section>
-				</section>
-                <section>
-					<section>
-						<h2>鯖江駅時刻表</h2>
-						<p>鯖江駅のハピラインふくい線の時刻をリアルタイムに表示します。</p>
-					</section>
-					<section>
-						<h3>技術詳細: 鯖江駅時刻表</h3>
-						<p class="left-align">
-							<strong>バックエンド (<code>TrainScheduleController.cs</code>):</strong><br>
-							- <code>Index</code>アクション内で、福井方面と敦賀方面の時刻表データを<code>List&lt;TrainInfo&gt;</code>としてハードコーディングし、Viewに渡しています。
-						</p>
-						<p class="left-align">
-							<strong>フロントエンド (<code>Index.cshtml</code> & JS):</strong><br>
-							- <strong>リアルタイム更新:</strong> <code>setInterval</code>を使い、1秒ごとに現在時刻を更新します。<br>
-							- <strong>次の電車計算:</strong> JavaScriptが現在時刻と全電車の発車時刻を比較し、次に出発する電車を特定します。<br>
-							- <strong>動的ハイライト:</strong> 既に出発した電車には<code>passed-train</code>クラスを、次に出発する電車には<code>next-train</code>クラスを動的に付与し、CSSで見た目を変更しています。
-						</p>
-					</section>
-				</section>
-                <section>
-					<section>
-						<h2>AIチャット</h2>
-						<p>3D空間内でAI先生とリアルタイムに対話できる機能です。</p>
-					</section>
-					<section>
-						<h3>技術詳細: AIチャット (1/2)</h3>
-						<p class="left-align">
-							<strong>バックエンド (<code>ChatController.cs</code>):</strong><br>
-							- <code>SendMessage</code>アクションがフロントエンドからのPOSTリクエストを受け取ります。<br>
-							- <code>HttpClient</code>を使い、GoogleのGemini API (<code>gemini-1.5-flash</code>モデル) にユーザーのメッセージを送信します。<br>
-							- APIキーは<code>appsettings.json</code>から安全に読み込まれます。<br>
-							- APIからの応答をJSON形式でフロントエンドに返します。
-						</p>
-					</section>
-					<section>
-						<h3>技術詳細: AIチャット (2/2)</h3>
-						<p class="left-align">
-							<strong>フロントエンド (<code>Index.cshtml</code> & JS):</strong><br>
-							- <strong>3D空間構築:</strong> <code>Three.js</code>ライブラリを用いて、シーン、カメラ、ライト、家具などをプログラムで生成しています。<br>
-							- <strong>3Dモデル読込:</strong> <code>GLTFLoader</code>を使用して、AI先生の3Dモデル(<code>.glb</code>ファイル)を非同期で読み込みます。読み込み失敗時はプロシージャルモデルをフォールバックとして表示します。<br>
-							- <strong>インタラクション:</strong> キーボード操作で3D空間内を移動。AI先生に近づいて<code>@</code>キーでチャットUIを有効化します。<br>
-							- <strong>非同期通信:</strong> <code>fetch</code> APIがバックエンドを呼び出し、AIの応答を待ってチャットログに表示します。
-						</p>
-					</section>
+				<section data-markdown="index.md"
+						 data-separator="^?
+---?
+$"
+						 data-separator-vertical="^?
+--?
+$"
+						 data-separator-notes="^Note:"
+						 data-charset="utf-8">
 				</section>
 			</div>
 		</div>
